Fix: update API URL to Railway address

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.iamport.kr https://code.jquery.com; script-src-elem 'self' 'unsafe-inline' https://cdn.iamport.kr https://code.jquery.com; connect-src 'self' http://localhost:5005 https://api.iamport.kr https://service.iamport.kr; frame-src 'self' https://service.iamport.kr https://kapi.kakao.com https://www.myspay.com; img-src 'self' data: *; style-src 'self' 'unsafe-inline';"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.iamport.kr https://code.jquery.com; script-src-elem 'self' 'unsafe-inline' https://cdn.iamport.kr https://code.jquery.com; connect-src 'self' https://mireumall-demo-production.up.railway.app https://api.iamport.kr https://service.iamport.kr; frame-src 'self' https://service.iamport.kr https://kapi.kakao.com https://www.myspay.com; img-src 'self' data: *; style-src 'self' 'unsafe-inline';"
     >
     <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
